--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -4,6 +4,9 @@
       <h3>I am in the AppComponent!</h3>
       <hr>
       <app-servers></app-servers>
+      <hr>
+      <app-success-alert></app-success-alert>
+      <app-warning-alert></app-warning-alert>
     </div>
   </div>
 </div>
