--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -9,6 +9,10 @@
    [disabled]='!allowNewServer'
    (click)='onCreateServer()'>Add Server</button>
    <!-- <p [innerText] ='allowNewServer'></p> -->
-  <p>{{ serverCreationStatus }}<p>
-<app-server></app-server>
-<app-server></app-server>
+  <!-- <p>{{ serverCreationStatus }}<p> -->
+    <p *ngIf="serverCreated; else noServer">Server was Created, Server name {{serverName}}</p>
+    <ng-template #noServer>
+      <p>No Server was created!</p>
+    </ng-template>
+<app-server *ngFor="let server of servers"></app-server>
+
