--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -1,4 +1,4 @@
 <p [ngStyle]="{backgroundColor: getColor()}"
-[ngClass]="{online: serverStatus === 'online'}">
+[ngClass]="{online: serverStatus === 'online' || serverStatus === 'offline'}">
 {{'Server'}} with ID {{serverId}} is {{getServerStatus()}}</p>
 
